--- a/Tribute Page/stylesheet.css
+++ b/Tribute Page/stylesheet.css
@@ -2,12 +2,23 @@ main {
     font-family: 'Libre Baskerville', serif;
 }
 
+#img-div {
+    width: 100%;
+    max-width: 1000px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
 #img-caption {
     font-style: italic;
     font-size: 14px;
 }
 
-.responsive {
+#image {
     width: 100%;
     height: auto;
+    max-width: inherit;
+    margin-left: auto;
+    margin-right: auto;
+    display: block;
 }
